drupal/sites/all/themes/minedu/css/minedu.base.css
/* ... */
  
#block-views-exp-resources-page,
#block-views-cf46b404572d9fa9e07f7d5ec92b99e0,
#block-views-resources-block-resources {
  margin-bottom: 23px;
}

.page-recursos .main-title,
.page-publicaciones .main-title,
#block-views-resources-block-resources h3, 
#block-views-cf46b404572d9fa9e07f7d5ec92b99e0 h3, 
#views-exposed-form-publish-views-page .views-exposed-widget > label,
#block-views-exp-resources-page .views-exposed-widget > label {
  background: #d1da21;
  border-radius: 8px 8px 0 0;
  color: #FFF;
  display: block;
  font-size: 20px;
  font-weight: bold;
  line-height: 1;
  padding: 15px 40px;
}

#views-exposed-form-publish-views-page .views-exposed-widget > label,
#block-views-exp-resources-page .views-exposed-widget > label {
  padding: 6% 16% !important;
}

.bef-tree >ul {
  margin-left: 10%;
}

.page-recursos .view-resources {
  border: 1px solid #d1da21;
}

.page-recursos .inner-container .view-resources .views-row {
  border-bottom: #808285 1px solid;
  margin-bottom: 15px;
  min-height: 110px;
  padding: 15px 0;
}

.page-recursos .inner-container .view-resources .views-row-last {
  border-bottom: none;
}

.page-recursos .inner-container .view-resources h4 {
  padding-top: 0;
}

.page-recursos .inner-container .view-resources h4 {
  color: #000;
  font-family: 'Arial';
  font-size: 16px;
}

.page-recursos .inner-container .view-resources a:hover {
  text-decoration: none;
}

.page-recursos .inner-container .view-resources h4:hover {
  color: #b0b81c;
  text-decoration: none;
}

.page-recursos .inner-container .view-resources .file,
.page-recursos .inner-container .view-resources .link-icon,
.page-recursos .inner-container .view-resources .embed-icon {
  float: left;
  width: 20%;
}

.page-recursos .inner-container .view-resources .file a,
.page-recursos .inner-container .view-resources .link-icon,
.page-recursos .inner-container .view-resources .embed-icon {
  background-position: center left !important;

}

.page-recursos .inner-container .view-resources .item-list {
  padding: 30px 40px 0;
}

#block-views-exp-publish-views-page .views-exposed-widget,
#block-views-exp-resources-page .views-exposed-widget {
  background: #f2f2f2;
  border-radius: 5px 5px 0 0;
}

#block-views-exp-publish-views-page .views-exposed-widget .views-widget,
#block-views-exp-resources-page .views-exposed-widget .views-widget {
  border: 1px solid #d1da21;
  padding: 9.5% 7.5%;
}

#block-views-exp-publish-views-page .views-exposed-widget .views-widget, 
#block-views-exp-resources-page .views-exposed-widget .views-widget {
  margin-left: 9.5% 7.5%;
}

.bef-tree,
#block-views-exp-resources-page .bef-tree {
  margin: 0;
}

#block-views-exp-publish-views-page label,
#block-views-exp-resources-page label {
  font-size: 14px;
  font-weight: normal;
  padding-left: 18px;
  padding-bottom: 18px;
}

#block-views-exp-publish-views-page input,
#block-views-exp-resources-page input {
  height: 18px;
  width: 18px;
}

#block-views-exp-publish-views-page .bef-tree-child ul,
#block-views-exp-resources-page .bef-tree-child ul {
  margin-left: 0;
}

#block-views-exp-publish-views-page .bef-tree-child ul li label:before,
#block-views-exp-resources-page .bef-tree-child ul li label:before {
  content: '-';
}

#block-views-exp-publish-views-page li,
#block-views-exp-resources-page li {
  list-style: none;
}

#block-views-resources-block-resources .view-resources {
  background: #eee;
  padding: 25px 50px;
}

#block-views-resources-block-resources h4 {
  color: #000;
  font-size: 14px;
  font-weight: bold;
  padding: 10px 0;
}

#block-views-resources-block-resources a:hover {
  text-decoration: none;
}

#block-views-resources-block-resources h4:hover {
  color: #d1da21;
}

#block-views-resources-block-resources .view-resources li {
  text-align: center;
  width: 20%;
}

/* PUBLICACIONES */
.node-type-publish .main-content .region-content-top #block-bean-bloque-enlace-publicaciones {
	width: 250px;
}

.inner-container .view-publish-views{
  padding: 50px 18px;
}

.inner-container .view-publish-views h3 a {
  color: #000;
  display: block;
  font-family: 'Arial';
  font-size: 16px;
  font-weight: bold;
  text-align: center;
}

.view-publish-views {
  border: 1px solid #d1da21; 
  padding: 4.5% 7.5% 2%;
}

.page-publicaciones .view-publish-views .views-row > a {
  display: block;
}

.page-publicaciones .inner-container .view-publish-views .views-row {
  height: 250px;
}

.view-publish-views .views-row h4 a {
  color: #000;
  display: block;
  font-family: 'Arial';
  font-size: 16px;
  font-weight: bold;
  padding: 0;
  text-align: center;
}

.inner-container .view-publish-views h3 a:hover,
.view-publish-views .views-row h4 a:hover {
  color: #b0b81c; 
  text-decoration: none;
}

.view-publish-views .views-row a img {
  display: block;
  height: auto;
  margin: 0 auto;
  width: 30%;
}

.special-main-title {
  display: none;
}

#colorbox .special-main-title,
.page-poll .main-title,
.page-forum .main-title,
.page-comment .main-title,
#block-bean-descripcion-programas h3,
.page-user-edit .special-main-title,
.page-actividades .special-main-title,
.page-publicaciones .special-main-title,
.page-recursos .special-main-title {
  background: transparent;
  color: #000;
  display: block;
  font-size: 30px;
  padding-left: 0;
  padding-bottom: 40px !important;
  text-transform: uppercase;
}

.page-recursos #colorbox .main-title {
  display: none;
}

.page-user-edit .special-main-title {
  background: #99c89c;
  border-radius: 5px 5px 0 0;
  color: #FFF;
  display: block;
  font-size: 20px;
  font-weight: bold;
  letter-spacing: 0.5px;
  line-height: 1;
  padding: 15px 25px 10px !important;
  text-transform: uppercase;
}

#block-bean-bloque-enlace-recursos,
#block-bean-bloque-enlace-publicaciones {
  background: url('../img/link_nav_arrow.png') #94c4cc no-repeat 5% center;
  border-radius: 5px;
  font-size: 20px;
  font-weight: bold;
}
/* ... */

